clusters/home/apps/linkding/linkding/configs/linkding-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding-ingressroute
  namespace: linkding
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://linkding.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Linkding
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: linkding # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Linkding
    #gethomepage.dev/widget.type: "linkding"
    #gethomepage.dev/widget.url: "https://linkding.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`linkding.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: linkding
      port: 10210
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: linkding-certificate-secret
